* fix NullPointerException while KMZ export having a not completely initialized object
* fix object initialization using wrong object key
* fix serial connected iCharger live gatherer tolerating timeouts
* fix object update problem while removing objects
* fix HoTTAdapter* GAM capacity filter null value
* fix GraphicsTemplate save problems
HoTTAdapter
	* add missing measurements (GAM,EAM) and events(preliminary use inverse bits) to HoTTAdapter
	* add missing measurements (GAM,EAM) and events(preliminary use inverse bits) to HoTTAdapter2

Version 3.3.0 - 01 Jul 2017
OVERVIEW:
+ add UT16E multimeter support
+ add D100 charger support
+ enhance HoTTAdapter support
+ enhance NMEA-Adapter support
+ enhance MC3000 & Q200 support
+ enhance VC820 & VC840 support
+ enhance History analysis to full functional beta version (pls enable in preferences)
+ enhance serial port detection for virtual serial ports
+ enhance SM GPS-Logger support
+ enhance SM UniLog2 support 
+ update documentation

DETAILS:
- fix analog display of synchronized master record
- support UTC time formatting
- enhance GPS coordinates support (langitude / latitude)
	- formatting in degrees/minutes or decimal degrees based on unit settings in the device
- keep selected channel after opening an OSD file
- update Copyrights
- add history graphics template support (no default set of templates get delivered) 
- fix STM virtual serial port enumeration problem (Graupner MC-28)
- fix device XML migration problem with devices using USB
- simplify device XMLs to language neutral version to reduce maintenance effort
- add MDL converter functionality for MC-28/MC-26 from/to MC-32,MC-20,MX-20,MC-16

HoTTAdapter*
	- fix start time stamp using last modified of log file
	- fix header in graphics window displaying consistent actual date, this is independent of the log file date
Junsi iCharger (serial communication only)
	- fix problems with received strings which are not a valid status
MC3000