@@ -8,6 +8,7 @@ Version 3.3.1 - xx yyy 2017
 * fix object update problem while removing objects
 * fix HoTTAdapter* GAM capacity filter null value
 * fix GraphicsTemplate save problems
+* reduce graphical display changes to force unsaved hint
 HoTTAdapter
 	* add missing measurements (GAM,EAM) and events(preliminary use inverse bits) to HoTTAdapter
 	* add missing measurements (GAM,EAM) and events(preliminary use inverse bits) to HoTTAdapter2
